# GIAIC-HACKATON-1-PROJECT-1

./: .gitignore  404.html  AGENTS_AND_SKILLS.md  AUTH_IMPLEMENTATION_GUIDE.md  CLAUDE.md  FRONTEND_AUTH_GUIDE.md  FULL_STACK_PRESENTATION.md  LOCAL_TESTING_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SPECKIT-PLUS-GUIDE.md  SPEED_OPTIMIZATION.md  index.html  sitemap.xml
blog/: index.html  rss.xml
chatbot-backend/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  INSTALL.ps1  LOCAL_TESTING.md  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  START_HERE.md  pyproject.toml  railway.toml  requirements.txt  test-local.ps1  test_backend.py
chatbot-backend/alembic/: env.py
chatbot-backend/alembic/versions/: 20251211_001_initial_schema.py
chatbot-backend/app/: main.py
chatbot-backend/app/api/: __init__.py
chatbot-backend/app/api/routes/: auth.py  chat.py  history.py
chatbot-backend/app/core/: config.py  config_optimized.py  logging.py
chatbot-backend/app/db/: __init__.py  models.py  session.py
chatbot-backend/app/middleware/: __init__.py  rate_limit.py
chatbot-backend/app/models/: __init__.py  requests.py  responses.py
chatbot-backend/app/services/: __init__.py  auth_service.py  chat_service.py  embedding_service.py  qdrant_service.py  rag_service.py
chatbot-backend/scripts/: ingest_documents.py
chatbot-backend/tests/: conftest.py  test_api_chat.py  test_api_history.py  test_chat_service.py  test_database.py  test_embedding_service.py  test_qdrant_service.py  test_rag_service.py
chatbot-frontend/: README.md  index.html  (+2 more)
(+292 files in other folders)
